  * checks/files.{pm,desc}:
    + [BR] Fix false-positive dir-or-file-in-build-tree for
      the sbuild source package.  (Closes: #720910)
    + [NT] Add check for empty udeb packages.  Thanks to Cyril
      Brulebois for the suggestion.  (Closes: #672664)
    + [NT] Remove exception for "/selinux" top-level directory.
      Thanks to Laurent Bigonville for the report.
      (Closes: #723730)
  * checks/menu-format.desc:
    + [BR] Rewrite description of the tag for desktop files
      without a keywords entry based on a wording from Gaudenz
      Steinlin.  (Closes: #706966)
    + [NT] Apply patch from Lucas Nussbaum to add an additional
      reference to the desktop-entry-lacks-keywords-entry tag.
      (Closes: #722582)
  * checks/rules.{desc,pm}:
    + [BR] Refactor the check for known targets in d/rules.
    + [BR] Add check for missing for recommended "get-orig-source"
      target in d/rules for packages that look like they have been
      repacked.  (Closes: #460174)
  * checks/testsuite.pm:
    + [NT] Add "allow-stderr" as known autopkgtest "restriction".
      Thanks to Jérémy Bobbio for the report and the initial
      patch.  (Closes: #721179)
  * checks/version-substvars{.desc,.pm}:
    + [NT] Mention that version-substvar-for-external-package
      can happen if the package name used in the relation has
      a typo.  Thanks to Joachim Reichel for reporting this.
      (Closes: #708576)
    + [NT] Ignore ":any" qualifiers in dependencies.  Thanks to
      Scott Ritchie for the report.  (Closes: #658320)

  * commands/info:
    + [NT] New file (replacing lintian-info).
    + [NT] Emit a deprecation warning for --include-dir
      and --[no-]user-dirs when they are not the first
      arguments and called as lintian-info.

  * doc/README.in:
    + [NT] Replaced by top-level README.

  * data/common/source-fields:
    + [NT] Allow the "Dgit" field in source packages.  Thanks
      to Ian Jackson for the report.  (Closes: #721205)