@@ -1,2 +1,1 @@
-foo.5
 鳥の詩.1
