@@ -1,4 +1,5 @@
 etc
+usr/bin
 usr/doc
 usr/share/foo
 usr/share/man/man1/random
