@@ -1,0 +1,5 @@
+.TH 鳥の詩 "1"
+.SH NAME
+鳥の詩 \- command in PATH written in UTF-8
+.SH DESCRIPTION
+鳥の詩 (Tori no uta) is not really a useful command.
